# Facial-Expression-Recognition

./: .gitignore  Classifier.py  GUI.py  LICENSE  README.md  Test.py  image_classifier_tab.py  main.py  pyproject.toml  requirements.txt  settings.json
notebooks/: Model_Training.ipynb
scripts/: setup.sh
src/facial_expression/: Classifier.py  __init__.py  __main__.py  image_classifier_tab.py  main.py  paths.py  video_classifier_tab.py
src/facial_expression_recognition/: classifier.py  image_classifier_tab.py  main.py  video_classifier_tab.py
src/fer_app/: __init__.py  web_app.py
